--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "path": "^0.12.7",
-    "probot": "^7.2.0"
+    "probot": "^7.2.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
     "jest": "^22.4.3",
